RESOLVED FIXED 172185
Option() named constructor is not per spec
https://bugs.webkit.org/show_bug.cgi?id=172185
Summary Option() named constructor is not per spec
Domenic Denicola
Reported 2017-05-16 13:59:13 PDT
In particular it does not work correctly with no arguments or undefined arguments. See tests at http://w3c-test.org/html/semantics/forms/the-option-element/option-element-constructor.html and spec at https://html.spec.whatwg.org/#dom-option
Attachments
WIP Patch (12.40 KB, patch)
2017-05-19 13:46 PDT, Chris Dumez
no flags
Patch (15.39 KB, patch)
2017-05-19 14:09 PDT, Chris Dumez
no flags
Chris Dumez
Comment 1 2017-05-19 13:46:30 PDT
Created attachment 310696 [details] WIP Patch
Chris Dumez
Comment 2 2017-05-19 14:09:27 PDT
WebKit Commit Bot
Comment 3 2017-05-19 16:20:12 PDT
Comment on attachment 310697 [details] Patch Clearing flags on attachment: 310697 Committed r217168: <http://trac.webkit.org/changeset/217168>
WebKit Commit Bot
Comment 4 2017-05-19 16:20:13 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.