Option() named constructor is not per spec https://bugs.webkit.org/show_bug.cgi?id=172185

Reviewed by Sam Weinig.

LayoutTests/imported/w3c:

Import test coverage from upstream web-platform-tests at 8b69df3a68.

* web-platform-tests/html/semantics/forms/the-option-element/option-element-constructor-expected.txt: Added.
* web-platform-tests/html/semantics/forms/the-option-element/option-element-constructor.html: Added.
* web-platform-tests/html/semantics/forms/the-option-element/option-index-expected.txt: Added.
* web-platform-tests/html/semantics/forms/the-option-element/option-index.html: Added.
* web-platform-tests/html/semantics/forms/the-option-element/w3c-import.log:

Source/WebCore:

Align the behavior of the Option() named constructor with the HTML specification:
- https://html.spec.whatwg.org/#dom-option

In particular, we no longer create an empty Text child node if the input text is the empty string.
This also aligns our behavior with Firefox.

Test: imported/w3c/web-platform-tests/html/semantics/forms/the-option-element/option-element-constructor.html

* html/HTMLOptionElement.cpp:
(WebCore::HTMLOptionElement::createForJSConstructor):
* html/HTMLOptionElement.h:
* html/HTMLOptionElement.idl:


Canonical link: https://commits.webkit.org/189297@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@217168 268f45cc-cd09-0410-ab3c-d52691b4dbfc