Source/WebCore/html/HTMLOptionElement.cpp
@@ -65,16 +65,15 @@ Ref<HTMLOptionElement> HTMLOptionElement::create(const QualifiedName& tagName, D
     return adoptRef(*new HTMLOptionElement(tagName, document));
 }
 
-ExceptionOr<Ref<HTMLOptionElement>> HTMLOptionElement::createForJSConstructor(Document& document,
-    const String& data, const String& value, bool defaultSelected, bool selected)
+ExceptionOr<Ref<HTMLOptionElement>> HTMLOptionElement::createForJSConstructor(Document& document, const String& text, const String& value, bool defaultSelected, bool selected)
 {
-    Ref<HTMLOptionElement> element = adoptRef(*new HTMLOptionElement(optionTag, document));
+    auto element = create(document);
 
-    auto text = Text::create(document, data.isNull() ? emptyString() : data);
-
-    auto appendResult = element->appendChild(text);
-    if (appendResult.hasException())
-        return appendResult.releaseException();
+    if (!text.isEmpty()) {
+        auto appendResult = element->appendChild(Text::create(document, text));
+        if (appendResult.hasException())
+            return appendResult.releaseException();
+    }
 
     if (!value.isNull())
         element->setValue(value);
